--- a/index.html
+++ b/index.html
@@ -21,33 +21,17 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <main>
-      <div class="card">
-        <div class="card__img">
-          <img
-            src="images/image-qr-code.png"
-            alt="qr-code-image"
-            width="300"
-            height="300"
-          />
-        </div>
-        <div class="card__text">
-          <h1>Improve your front-end skills by building projects</h1>
-          <p>
-            Scan the QR code to visit Frontend Mentor and take your coding
-            skills to the next level
-          </p>
-        </div>
+    <div class="card">
+      <div class="card__img">
+        <img src="images/image-qr-code.png" alt="qr-code-image" />
       </div>
-    </main>
-
-    <footer>
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Ikechukwu Chidera</a>.
+      <div class="card__text">
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
       </div>
-    </footer>
+    </div>
   </body>
 </html>
